--- a/index.html
+++ b/index.html
@@ -39,7 +39,34 @@
     </main>
 
     <footer class="index-footer">
-        <p>&copy; 2025 Torino Tc. Todos los derechos reservados.</p>
+        <section>
+            <div class="maps-container">
+                <a href="https://www.bing.com/maps?&ty=18&q=San%20Luis%2C%20San%20Luis%20torino%20tc&mb=-33.299728~-66.34066~-33.30743~-66.333752&cardbg=%23F98745&dt=1747465200000&tt=Calle%20San%20Mart%C3%ADn%20Cuatro%20Avenidas%2C%20D5700BQA%20San%20Luis%2C%20San%20Luis&tsts1=%2526ty%253D18%2526q%253DSan%252520Luis%25252C%252520San%252520Luis%252520torino%252520tc%2526mb%253D-33.299728~-66.34066~-33.30743~-66.333752%2526cardbg%253D%252523F98745%2526dt%253D1747465200000&tstt1=Calle%20San%20Mart%C3%ADn%20Cuatro%20Avenidas%2C%20D5700BQA%20San%20Luis%2C%20San%20Luis&cp=-33.303579~-66.341022&lvl=16.48&pi=0&ftst=1&ftics=True&v=2&sV=2&form=S00027"></a>
+                <h3>Encuentranos</h2>
+                <h4>Calle San Martín Cuatro Avenidas,D5700BQA, San Luis</h3>
+            </div>
+            <div class="tel-container">
+                <a href="tel:+98383838383"></a>
+                <h3>Llamanos</h2>
+                <h4>98383838383</h3>
+            </div>
+            <div class="email-container">
+                <a href="mailto:torinotc@gmail.com "></a>
+                <h3>Mail us</h2>
+                <h4>torinotc@gmail.com</h3>
+            </div>
+        
+        </section>
+
+
+
+
+
+        <div>
+
+            <p>&copy; 2025 Torino Tc. Todos los derechos reservados.</p>
+
+        </div>
     </footer>
 </body>
 </html>
