Correcciones de 2da Entrega

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de Ventas Torino TC</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
     <header class="index-header">
@@ -18,8 +20,8 @@
                 <li class="grupo-menu">
                     <ul>
                         <li><a href="#inicio">Inicio</a></li>
-                        <li><a href="./assets/pages/nosotros.html">Nosotros</a></li>
-                        <li><a href="./assets/pages/galeria.html">Galeria</a></li>
+                        <li><a href="./pages/nosotros.html">Nosotros</a></li>
+                        <li><a href="./pages/galeria.html">Galeria</a></li>
                     </ul>
                 </li>
                 
@@ -27,6 +29,12 @@
             </ul>
             <h1 id="texto1">De amante a amantes</h1>
             <h2 id="texto2">del Torino Argentino 🇦🇷</h2>
+            <div>
+                <strong>Porque cada Torino cuenta una historia que merece ser contada, preservada y compartida con quienes sienten la misma pasión.</strong>
+                <strong>Un Espacio hecho por y para fanáticos, donde la historia, la potencia y el orgullo argentino se encuentran en cada curva.</strong>
+                <strong>Celebramos al Torino con el corazón en el acelerador: fotos, historias, datos y ese amor incondicional que no entiende de épocas.</strong>
+            </div>
+            
         </nav>
     </header>
     <main class="main-index">
@@ -50,21 +58,21 @@
             <div class="maps-container">
                 <a href="https://www.bing.com/maps?&ty=18&q=San%20Luis%2C%20San%20Luis%20torino%20tc&mb=-33.299728~-66.34066~-33.30743~-66.333752&cardbg=%23F98745&dt=1747465200000&tt=Calle%20San%20Mart%C3%ADn%20Cuatro%20Avenidas%2C%20D5700BQA%20San%20Luis%2C%20San%20Luis&tsts1=%2526ty%253D18%2526q%253DSan%252520Luis%25252C%252520San%252520Luis%252520torino%252520tc%2526mb%253D-33.299728~-66.34066~-33.30743~-66.333752%2526cardbg%253D%252523F98745%2526dt%253D1747465200000&tstt1=Calle%20San%20Mart%C3%ADn%20Cuatro%20Avenidas%2C%20D5700BQA%20San%20Luis%2C%20San%20Luis&cp=-33.303579~-66.341022&lvl=16.48&pi=0&ftst=1&ftics=True&v=2&sV=2&form=S00027"><img src="./assets/img/maps.png" alt="maps icono"></a>
                 <div>
-                    <h3>Encuentranos</h3>
+                    <h4>Encuentranos</h4>
                     <p>Calle San Martín Cuatro Avenidas,D5700BQA, San Luis</p>
                 </div>
             </div>
             <div class="tel-container">
                 <a href="tel:+98383838383"><img src="./assets/img/phone.png" alt="telefono icono"></a>
                 <div>
-                    <h3>Llamanos</h3>
+                    <h4>Llamanos</h4>
                     <p>98383838383</p>
                 </div>
             </div>
             <div class="email-container">
                 <a href="mailto:torinotc@gmail.com "><img src="./assets/img/mail.png" alt="mail icono"></a>
                 <div>
-                    <h3>Contactanos</h3>
+                    <h4>Contactanos</h4>
                     <p>torinotc@gmail.com</p>
                 </div>
             </div>
@@ -86,5 +94,6 @@
         </section>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
