Agregados tributos y curiosidades html con animaciones y estilos

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,6 +20,8 @@
                     <ul>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="./galeria.html">Galeria</a></li>
+                        <li><a href="./curiosidades.html">Curiosidades</a></li>
+                        <li><a href="./tributos.html">Tributos</a></li>
                         
                     </ul>
                 </li>
@@ -31,7 +33,7 @@
     </header>
     <main class="container py-5">
         <div class="row mb-4">
-            <div class="col-12 text-center">
+            <div id="nosotros-container" class="col-12 text-center text-white">
                 <h1 class="mb-3">Sobre Nosotros</h1>
                 <p>
                     Somos TorinoTC, una organización dedicada a compartir la pasión por los automóviles Torino y el automovilismo argentino. Nuestro objetivo es conectar a entusiastas, coleccionistas y nuevos interesados en el mundo Torino.
