--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="./pages/nosotros.html">Nosotros</a></li>
                         <li><a href="./pages/galeria.html">Galeria</a></li>
+                        <li><a href="./pages/curiosidades.html">Curiosidades</a></li>
+                        <li><a href="./pages/tributos.html">Tributos</a></li>
                     </ul>
                 </li>
                 
