--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -21,7 +21,8 @@
                     <ul>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="./nosotros.html">Nosotros</a></li>
-                        
+                        <li><a href="./curiosidades.html">Curiosidades</a></li>
+                        <li><a href="./tributos.html">Tributos</a></li>
                     </ul>
                 </li>
                 
