--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,6 +19,7 @@
                 <li class="grupo-menu">
                     <ul>
                         <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="./nosotros.html">Nosotros</a></li>
                         <li><a href="./galeria.html">Galeria</a></li>
                         <li><a href="./curiosidades.html">Curiosidades</a></li>
                         <li><a href="./tributos.html">Tributos</a></li>
