--- a/pages/tributos.html
+++ b/pages/tributos.html
@@ -23,6 +23,7 @@
                         <li><a href="./nosotros.html">Nosotros</a></li>
                         <li><a href="./galeria.html">Galeria</a></li>
                         <li><a href="./curiosidades.html">Curiosidades</a></li>
+                        <li><a href="./tributos.html">Tributos</a></li>
                         
                     </ul>
                 </li>
