--- a/pages/curiosidades.html
+++ b/pages/curiosidades.html
@@ -16,6 +16,7 @@
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="./nosotros.html">Nosotros</a></li>
                         <li><a href="./galeria.html">Galeria</a></li>
+                        <li><a href="./curiosidades.html">Curiosidades</a></li>
                         <li><a href="./tributos.html">Tributos</a></li>
                     </ul>
                 </li>
